# asterisk-chan-quectel

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile.in  README.md  asterisk-headers.sh  at_command.c  at_command.h  at_parse.c  at_parse.h  at_queue.c  at_queue.h  at_read.c  at_read.h  at_response.c  at_response.h  build-chan-quectel.cmake  chan_quectel.c  chan_quectel.h  channel.c  channel.h  char_conv.c  clang-format.cmake  cli.c  cli.h  config.h.cmake  config.h.in  configure-openwrt-makefile.cmake  configure.ac  cpvt.c  cpvt.h  dc_config.c  dc_config.h  dotenv.sh  error.h  format-chan-quectel.cmake  get-build-flags.sh  get-source-date-epoch.sh  (+19 more)
.devcontainer/debian/: .dockerignore  Dockerfile  devcontainer.env  devcontainer.json
.devcontainer/ubuntu/: Dockerfile  devcontainer.env  devcontainer.json
.github/actions/install-asterisk-headers/: action.yml  configure-asterisk.sh
.github/actions/install-openwrt-sdk/: action.yml  download-owrt-sdk.sh
.github/actions/install-required-packages/: action.yml
.github/workflows/: build-owrt.yml  build.yml  cross-compile.yml  publish.yml
cmake/: asterisk-headers.cmake  asterisk-version-num.cmake  clang-format.cmake
cmake/source-date-epoch/: CMakeLists.txt  check-source-date-epoch.cmake  source-date-epoch.env.in
cmake/test/: AST_BUILDOPT_SUM.cmake  arch-specific.cmake  comment-section.cmake  dump-header.cmake  needed-libs.cmake
cmake/toolchain/: aarch64-linux-gnu.toolchain.cmake  aarch64-none-linux-gnu.toolchain.cmake  arm-linux-gnueabihf.toolchain.cmake  arm-none-linux-gnueabihf.toolchain.cmake
cpack/: post-build-deb-info.cmake  post-build-lintian.cmake  suppressed-tags.txt
cpack/deb/: conffiles  postinst
docker/: README.md  Taskfile.dist.yaml  debian.bookworm  debian.bullseye  debian.buster  docker.env  rpi-debian.bookworm  rpi-debian.bullseye  rpi-debian.buster
docker/arm-gnu-toolchain/: Taskfile.dist.yaml
docker/arm-gnu-toolchain/debian/: Taskfile.dist.yaml
docker/arm-gnu-toolchain/debian/10/: Taskfile.dist.yaml
docker/arm-gnu-toolchain/debian/11/: Taskfile.dist.yaml
docker/arm-gnu-toolchain/debian/12/: Taskfile.dist.yaml
docker/arm-gnu-toolchain/ubuntu/: Taskfile.dist.yaml
docker/arm-gnu-toolchain/ubuntu/20.04/: Taskfile.dist.yaml
docker/arm-gnu-toolchain/ubuntu/22.04/: Taskfile.dist.yaml
docker/arm-gnu-toolchain/ubuntu/24.04/: Taskfile.dist.yaml
docker/builder/: Taskfile.dist.yaml
docker/builder/cc/: Dockerfile  Taskfile.dist.yaml
docker/builder/centos/: Dockerfile  Taskfile.dist.yaml
docker/builder/native/: Dockerfile  Taskfile.dist.yaml
docker/builder/rpi/: Dockerfile  Taskfile.dist.yaml
docker/centos/: Taskfile.dist.yaml
docker/centos/7.8/: .dockerignore  Dockerfile  Taskfile.dist.yaml
docker/centos7.8/: .dockerignore  Dockerfile  build.sh  configure-asterisk.sh
docker/debian/: Taskfile.dist.yaml
docker/debian.10/: .dockerignore  Dockerfile  build-chan-quectel.sh  build.sh  configure-asterisk.sh
docker/debian.11/: Dockerfile  build-chan-quectel.sh  build.sh
docker/debian.12/: Dockerfile  build-chan-quectel.sh  build.sh  configure-asterisk.sh
docker/debian/10/: Dockerfile  Taskfile.dist.yaml
docker/debian/11/: .dockerignore  Dockerfile  Taskfile.dist.yaml
docker/debian/12/: Dockerfile  Taskfile.dist.yaml
docker/rpi-debian/: Taskfile.dist.yaml
docker/rpi-debian.10/: Dockerfile  build.sh
docker/rpi-debian.11/: Dockerfile  build.sh
docker/rpi-debian.12/: .dockerignore  Dockerfile  build-chan-quectel.sh
docker/rpi-debian/10/: Dockerfile  Taskfile.dist.yaml
docker/rpi-debian/11/: Dockerfile  Taskfile.dist.yaml
docker/rpi-debian/12/: Dockerfile  Taskfile.dist.yaml
docker/rpi-img/: Taskfile.dist.yaml
docker/task/: Taskfile.dist.yaml
docker/task.d/arm-gnu-toolchain/: Taskfile.dist.yaml
docker/task.d/asterisk/: Taskfile.dist.yaml
docker/task.d/chan-quectel/: Taskfile.dist.yaml
docker/task.d/cmake/: Taskfile.dist.yaml
docker/task.d/deb/: Taskfile.dist.yaml
docker/task.d/googletest/: Taskfile.dist.yaml
docker/task.d/ninja-build/: Taskfile.dist.yaml
docker/task.d/rpi/: Taskfile.dist.yaml
docker/task.d/ubuntu/: Taskfile.dist.yaml
docker/task.d/yum/: Taskfile.dist.yaml
docker/task/chan-quectel/: Taskfile.dist.yaml
docker/task/deb/: Taskfile.dist.yaml
docker/task/ninja-build/: Taskfile.dist.yaml
docker/ubuntu/: Taskfile.dist.yaml
docker/ubuntu/20.04/: Dockerfile  Taskfile.dist.yaml  dpkg-buildflags-arm64.env  sources-arm.list  sources.list
docker/ubuntu/22.04/: Dockerfile  Taskfile.dist.yaml  dpkg-buildflags-arm64.env  dpkg-buildflags-armhf.env  sources-arm.list  sources.list
docker/ubuntu/24.04/: Dockerfile  Taskfile.dist.yaml  dpkg-buildflags-amd64.env  dpkg-buildflags-arm64.env  dpkg-buildflags-armhf.env  sources-arm.list  ubuntu-arm.sources  ubuntu.sources
etc/: extensions.conf  quectel.conf
openwrt/: CMakeLists.txt  Makefile  build-opk.sh  diffconfig  diffconfig.in  feeds.conf.in  make-feeds-conf.cmake  makefile-git.in  makefile-standalone.in  pkg-vars.cmake.in  readme-package-building.txt
src/: CMakeLists.txt  app.c  app.h  ast_compat.h  ast_config.h  at_command.c  at_command.h  at_parse.c  at_parse.h  at_queue.c  at_queue.h  at_read.c  at_read.h  at_response.c  at_response.h  chan_quectel.c  chan_quectel.h  channel.c  channel.h  char_conv.c  char_conv.h  cli.c  cpvt.c  cpvt.h  dc_config.c  dc_config.h  error.c  error.h  eventfd.c  eventfd.h  gsm7_luts.h  helpers.c  helpers.h  memmem.c  memmem.h  mixbuffer.c  mixbuffer.h  monitor_thread.c  monitor_thread.h  msg_tech.c  (+16 more)
test/asterisk/: AST_BUILDOPT_SUM.c
tools/udev/: 65-modem.rules  README.md  read-modem-properties.sh  tty-script-runner.sh
uac/: quectel.conf
